--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
     "axios": "^1.6.1"
   },
   "devDependencies": {
+    "@simplewebauthn/types": "^11.0.0",
     "@types/node": "^20.9.0",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
-    "@simplewebauthn/types": "^11.0.0",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -58,9 +58,9 @@
     "typedoc-plugin-markdown": "^4.0.0-next.38",
     "typedoc-vitepress-theme": "^1.0.0-next.4",
     "typescript": "^4.5.4",
-    "vite": "^4.5.3",
+    "vite": "^6.2.2",
     "vite-plugin-dts": "^4.2.4",
-    "vitepress": "^1.0.0-rc.34",
-    "vitest": "^1.1.1"
+    "vitepress": "^1.6.3",
+    "vitest": "^3.0.9"
   }
 }
